--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase": "^10.12.2",
+    "firebase-admin": "^12.1.1",
     "jest": "^29.7.0",
     "mongoose": "^8.4.0",
     "nodemon": "^3.1.0",
