--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "firebase-admin": "^12.1.1",
     "jest": "^29.7.0",
     "mongoose": "^8.4.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "sinon": "^18.0.0",
     "supertest": "^7.0.0"
