--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
-		"start":"node server.js",
+    "start": "node server.js",
     "test": "jest"
   },
   "keywords": [],
@@ -15,6 +15,7 @@
     "@google-cloud/speech": "^6.6.0",
     "@google-cloud/text-to-speech": "^5.3.0",
     "@google/generative-ai": "^0.11.4",
+    "@vitalets/google-translate-api": "^9.2.0",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -32,6 +33,7 @@
     "sinon": "^18.0.0",
     "supertest": "^7.0.0",
     "tempy": "^3.1.0",
+    "translate-google-api": "^1.0.4",
     "wav": "^1.0.2",
     "wav-file-info": "^0.0.10"
   },
