--- a/frontend/vagabond/package.json
+++ b/frontend/vagabond/package.json
@@ -5,13 +5,18 @@
   "dependencies": {
     "@capacitor/android": "^6.0.0",
     "@capacitor/core": "^6.0.0",
+    "@capacitor/filesystem": "^6.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@ionic-native/media-capture": "^5.36.0",
     "@ionic/react": "^8.2.0",
+    "@mozartec/capacitor-microphone": "^6.0.0",
     "@mui/icons-material": "^5.15.19",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
     "axios": "^1.7.2",
+    "cordova-plugin-file": "^8.1.0",
+    "cordova-plugin-media-capture": "^5.0.0",
     "firebase": "^10.12.1",
     "i18next": "^23.11.5",
     "ionicons": "^7.4.0",
